# ThaiLawOnline-Chatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  start.sh
backend/: config.py  council.py  main.py  storage.py
backend/rag/: __init__.py  notion_client.py  prompts.py  retriever.py  vortex_client.py
backend/wordpress/: __init__.py  auth.py  models.py
deploy/: chatbot.service  nginx.conf
wordpress/: chatbot-connector.js  chatbot-connector.php
